--- a/parsingLab/parsing lab/Base.lproj/Main.storyboard
+++ b/parsingLab/parsing lab/Base.lproj/Main.storyboard
@@ -286,40 +286,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qbd-7n-7jx">
-                                <rect key="frame" x="87" y="108" width="240" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="6GH-Iu-3oe"/>
-                                    <constraint firstAttribute="width" constant="240" id="Xgt-Rj-3Yk"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6A-Bg-0yq">
-                                <rect key="frame" x="87" y="248" width="240" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="Cqp-lo-0c4"/>
-                                    <constraint firstAttribute="width" constant="240" id="n06-aG-xOC"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PaI-zf-eQ1">
-                                <rect key="frame" x="0.0" y="408" width="414" height="405"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6A-Bg-0yq">
+                                <rect key="frame" x="87" y="238" width="240" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="gfL-eF-bJl"/>
+                                    <constraint firstAttribute="height" constant="120" id="ggt-cf-kbS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qbd-7n-7jx">
+                                <rect key="frame" x="87" y="366" width="240" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="Ljs-I6-gTy"/>
+                                    <constraint firstAttribute="width" constant="240" id="s5a-n1-aAe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="l6A-Bg-0yq" firstAttribute="top" secondItem="Qbd-7n-7jx" secondAttribute="bottom" constant="20" id="2Dg-ec-App"/>
-                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="trailing" secondItem="Qsn-Rg-QFW" secondAttribute="trailing" id="BNq-X3-HK6"/>
-                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="bottom" secondItem="Qsn-Rg-QFW" secondAttribute="bottom" id="Ji3-d8-84g"/>
-                            <constraint firstItem="l6A-Bg-0yq" firstAttribute="centerX" secondItem="Qsn-Rg-QFW" secondAttribute="centerX" id="QKu-qv-dx1"/>
-                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="leading" secondItem="Qsn-Rg-QFW" secondAttribute="leading" id="U84-L2-uhh"/>
-                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="top" secondItem="l6A-Bg-0yq" secondAttribute="bottom" constant="40" id="Y5g-1X-4Po"/>
-                            <constraint firstItem="Qbd-7n-7jx" firstAttribute="centerX" secondItem="Qsn-Rg-QFW" secondAttribute="centerX" id="lMf-kz-zB6"/>
-                            <constraint firstItem="Qbd-7n-7jx" firstAttribute="top" secondItem="Qsn-Rg-QFW" secondAttribute="top" constant="20" id="oG6-uS-thf"/>
+                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="trailing" secondItem="Qsn-Rg-QFW" secondAttribute="trailing" id="00m-T1-ZD5"/>
+                            <constraint firstItem="Qbd-7n-7jx" firstAttribute="top" secondItem="l6A-Bg-0yq" secondAttribute="bottom" constant="8" id="7L5-Gc-UeV"/>
+                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="bottom" secondItem="Qsn-Rg-QFW" secondAttribute="bottom" id="MNW-O6-dq6"/>
+                            <constraint firstItem="l6A-Bg-0yq" firstAttribute="centerX" secondItem="PaI-zf-eQ1" secondAttribute="centerX" id="bcM-2B-5VN"/>
+                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="leading" secondItem="Qsn-Rg-QFW" secondAttribute="leading" id="cHx-5q-70V"/>
+                            <constraint firstItem="PaI-zf-eQ1" firstAttribute="top" secondItem="Qsn-Rg-QFW" secondAttribute="top" id="ueU-PR-XVr"/>
+                            <constraint firstItem="Qbd-7n-7jx" firstAttribute="centerX" secondItem="PaI-zf-eQ1" secondAttribute="centerX" id="xG4-7p-0p4"/>
+                            <constraint firstItem="l6A-Bg-0yq" firstAttribute="top" secondItem="Qsn-Rg-QFW" secondAttribute="top" constant="150" id="zNe-si-Xak"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qsn-Rg-QFW"/>
                     </view>
@@ -339,6 +341,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="4Bt-NA-51V" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="n4R-CQ-37y">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
